# QuantVision-v2

./: .env.example  .env.production.example  .gitignore  IMPROVEMENT_PLAN.md  Phase1-Report-TradingView-Fix.md  Phase2-Report-TypeScript-Fix.md  QUANTVISION-COMPLETE-DESIGN-v3.0.md  QuantVision-Development-Plan-v2.1.md  README-SCRIPTS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  kill.bat  run.bat  start.bat  start.ps1  stop.bat  stop.ps1
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  quantvision_backend.spec  requirements.txt  run_server.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260110_add_deployment_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/backtest/: __init__.py  broker.py  engine.py  performance.py  portfolio.py
backend/app/core/: __init__.py  auth.py  config.py  config_production.py  config_validation.py  database.py  logging.py  metrics.py  redis.py  security.py
backend/app/execution/: __init__.py  order_manager.py  pov.py  tca.py  twap.py  vwap.py
backend/app/factor_engine/: __init__.py  factor_tester.py  operators.py  preprocessor.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  data_lineage.py  deployment.py  factor_cache.py  financial_data.py  market_data.py  strategy_v2.py  universe.py  user.py
backend/app/risk/: __init__.py  (+5 more)
backend/reports/: PHASE2-REPORT.md
backend/tests/: __init__.py  conftest.py  test_api.py  test_backtest.py  test_factor_engine.py
(+441 files in other folders)
